k8s/be-deployment.yaml
# 애플리케이션이 ConfigMap/Secret 받아 쓰는 법
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: zkvn1103/undong-minjok-api:41
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: backend-storage
              mountPath: /app/uploads
            - name: backend-storage
              mountPath: /app/logs
          ports:
            - containerPort: 8888
      imagePullSecrets:
        - name: dockerhub-secret

      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
