k8s/fe-deployment.yaml
# pod > 스펙 지정 및 개수
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: zkvn1103/undong-minjok-client:51
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
      imagePullSecrets:
        - name: dockerhub-secret
