k8s/db-service.yaml
# DB 접근용 이름
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: app
spec:
  clusterIP: ""
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
